--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </label>
             <input type="range" id="slowdown-threshold" min="5" max="400" value="10" step="5" />
           </div>
+          <div class="timestep-control">
+            <label for="max-timestep">
+              Max timestep: <span id="max-timestep-value">500</span>ms
+            </label>
+            <input type="range" id="max-timestep" min="1" max="1000" value="500" step="10" />
+          </div>
         </div>
         <hr />
         <h3>Components</h3>
