Shadows work, move mode works, connection mode works

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- Common controls for both modes -->
         <hr />
         <h3>Edit</h3>
-        <button id="move-mode">Move</button>
+        <button id="move-mode" class="mode-btn">Move</button>
         <hr />
         <h3>View</h3>
         <button id="toggle-isometric" class="view-btn">🎛️ 2.5D View</button>
