Fixed some component visuals and construction options. Clear debug panel.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <button id="pause-btn" class="sim-btn">▶ Resume</button>
           <button id="step-btn" class="sim-btn">⏭ Step</button>
           <button id="single-step-btn" class="sim-btn">⏵ 1 Step</button>
+          <button id="reset-sim-btn" class="sim-btn" style="background: #654; margin-top: 5px;">↺ Reset</button>
           <div class="speed-controls">
             <button id="speed-down" class="sim-btn small">−</button>
             <span id="speed-display">1x</span>
@@ -124,7 +125,7 @@
         <button id="toggle-isometric" class="view-btn active">🎛️ 2.5D View</button>
         <div class="slider-control" style="margin: 8px 0;">
           <label for="view-elevation" style="font-size: 11px;">View Angle: <span id="view-elevation-value">30</span>°</label>
-          <input type="range" id="view-elevation" min="20" max="70" value="30" style="width: 100%;" />
+          <input type="range" id="view-elevation" min="10" max="70" value="30" style="width: 100%;" />
         </div>
         <button id="zoom-in">Zoom +</button>
         <button id="zoom-out">Zoom -</button>
