--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <summary>Flow</summary>
             <button data-component="pipe" class="component-btn">Pipe</button>
             <button data-component="valve" class="component-btn">Valve</button>
+            <button data-component="check-valve" class="component-btn">Check Valve</button>
+            <button data-component="relief-valve" class="component-btn">Relief Valve</button>
+            <button data-component="porv" class="component-btn">PORV</button>
             <button data-component="pump" class="component-btn">Pump</button>
           </details>
           <details open>
