X Got rid of old Euler method code that was causing problems. X Labels under the generator and condenser say 0 MW even when they're not. X Pressure gauges should come from the tops of the components X Condenser should have a pressure rating, but a low one. X Visual rendering of the core doesn't seem to match its diameter. Height is ok. X Turbine power calculations have a unit conversion problem for the edit menu X In construction mode, delete button should bring up the delete confirmation for the selected component (if any) X Core exceeds available space 3.30 m, when barrel ID is 3.35 m. X If I'm placing a component and I click on an existing component, the options should be "place inside" or "cancel" not "place normally" X User-editable scram logic (Scram controller component)

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <button data-component="reactor-vessel" class="component-btn">Reactor Vessel</button>
             <button data-component="core" class="component-btn">Reactor Core</button>
           </details>
+          <details open>
+            <summary>Controllers</summary>
+            <button data-component="scram-controller" class="component-btn">Scram Controller</button>
+          </details>
         </div>
         <div class="construction-info" style="margin-top: 10px; font-size: 11px; color: #888;">
           <div id="selected-component">No component selected</div>
