Added cost estimates

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
         <span id="sim-speed">Speed: 1x</span>
         <span id="perf-info">dt: 0ms</span>
       </div>
+      <div id="construction-cost-panel" style="display: none;">
+        <div id="cost-header">
+          <span id="cost-toggle">▶</span>
+          <span class="cost-title">Overnight Cost:</span>
+          <span id="total-cost">$0</span>
+        </div>
+        <div id="cost-breakdown" style="display: none;"></div>
+      </div>
       <div id="debug-panel">
         <h4>Debug <button id="toggle-debug">Hide</button></h4>
         <div id="debug-content">
