Added switchyard. Fixed shadows.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
             <summary>Controllers</summary>
             <button data-component="scram-controller" class="component-btn">Scram Controller</button>
           </details>
+          <details open>
+            <summary>Electrical</summary>
+            <button data-component="switchyard" class="component-btn">Switchyard</button>
+          </details>
         </div>
         <div class="construction-info" style="margin-top: 10px; font-size: 11px; color: #888;">
           <div id="selected-component">No component selected</div>
