--- a/index.html
+++ b/index.html
@@ -225,20 +225,7 @@
         <h4>Selected Component <button id="close-detail">X</button></h4>
         <div id="component-detail-content"></div>
       </div>
-      <div id="legend">
-        <h4>Fluid Temperature</h4>
-        <div class="legend-water"></div>
-        <div class="legend-labels">
-          <span>Tsat-50°C</span>
-          <span>Tsat</span>
-        </div>
-        <div class="legend-steam"></div>
-        <div class="legend-labels">
-          <span>Sat.</span>
-          <span>+100°C</span>
-          <span>+500°C</span>
-        </div>
-      </div>
+      <!-- Color legend is now rendered on canvas -->
     </div>
     <!-- Component Configuration Dialog -->
     <div id="component-dialog" class="component-dialog" style="display: none;">
