Containment building component added.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             <summary>Vessels</summary>
             <button data-component="tank" class="component-btn">Tank</button>
             <button data-component="pressurizer" class="component-btn">Pressurizer</button>
+            <button data-component="reactor-vessel" class="component-btn">Reactor Vessel</button>
+            <button data-component="building" class="component-btn">Building / Containment</button>
           </details>
           <details open>
             <summary>Flow</summary>
@@ -122,29 +124,22 @@
             <button data-component="relief-valve" class="component-btn">Relief Valve</button>
             <button data-component="porv" class="component-btn">PORV</button>
             <button data-component="pump" class="component-btn">Pump</button>
+            <button data-component="turbine-driven-pump" class="component-btn">Turbine-Driven Pump</button>
           </details>
           <details open>
             <summary>Heat Transfer</summary>
             <button data-component="heat-exchanger" class="component-btn">Heat Exchanger</button>
             <button data-component="condenser" class="component-btn">Condenser</button>
+            <button data-component="core" class="component-btn">Reactor Core</button>
           </details>
           <details open>
             <summary>Power</summary>
+            <button data-component="switchyard" class="component-btn">Switchyard</button>
             <button data-component="turbine-generator" class="component-btn">Turbine-Generator</button>
-            <button data-component="turbine-driven-pump" class="component-btn">Turbine-Driven Pump</button>
-          </details>
-          <details open>
-            <summary>Nuclear</summary>
-            <button data-component="reactor-vessel" class="component-btn">Reactor Vessel</button>
-            <button data-component="core" class="component-btn">Reactor Core</button>
           </details>
           <details open>
             <summary>Controllers</summary>
             <button data-component="scram-controller" class="component-btn">Scram Controller</button>
-          </details>
-          <details open>
-            <summary>Electrical</summary>
-            <button data-component="switchyard" class="component-btn">Switchyard</button>
           </details>
         </div>
         <div class="construction-info" style="margin-top: 10px; font-size: 11px; color: #888;">
