Deterministic sim mode. Minor fixes to NCG color display and other stuff.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                   Enable pressure solver
                 </label>
               </div>
+              <div style="margin-top: 8px;">
+                <label style="font-size: 11px;" title="When enabled, the solver will complete all steps regardless of wall time. This makes results reproducible but may cause UI freezes if timesteps become very small.">
+                  <input type="checkbox" id="deterministic-mode" />
+                  Deterministic mode
+                </label>
+              </div>
             </div>
           </details>
           <hr />
